--- a/es.html
+++ b/es.html
@@ -33,46 +33,32 @@
         Sobrevive. Lucha. Alcanza la salida.
     </div>
 
-    <div class="objective">
+    <div class="box objective">
         Eres el jugador verde. Muévete a lo largo de la tira LED desde el inicio hasta la salida azul.
         Derrota o evita a los enemigos rojos. Tienes 3 vidas por nivel.
     </div>
 
     <h2>controles</h2>
 
-    <div class="control-box">
-        <div class="controller">
-            <div class="btn-circle btn-up active"></div>
-            <div class="btn-circle btn-fire"></div>
-            <div class="btn-circle btn-down"></div>
-        </div>
-        <div class="control-text">
-            <div class="control-label">UP</div>
-            <div class="control-desc">muévete hacia la salida</div>
-        </div>
+    <div class="controller-container">
+        <img src="images/motwang_controller_light.svg" alt="MO_TWANG Controller" class="controller-image">
     </div>
 
-    <div class="control-box">
-        <div class="controller">
-            <div class="btn-circle btn-up"></div>
-            <div class="btn-circle btn-fire"></div>
-            <div class="btn-circle btn-down active"></div>
+    <div class="controller-legend">
+        <div class="legend-item">
+            <img src="images/up.svg" alt="UP" class="legend-icon">
+            <span class="legend-label">UP</span>
+            <span class="legend-desc">muévete hacia la salida</span>
         </div>
-        <div class="control-text">
-            <div class="control-label">DOWN</div>
-            <div class="control-desc">muévete hacia el inicio</div>
+        <div class="legend-item">
+            <img src="images/down.svg" alt="DOWN" class="legend-icon">
+            <span class="legend-label">DOWN</span>
+            <span class="legend-desc">muévete hacia el inicio</span>
         </div>
-    </div>
-
-    <div class="control-box">
-        <div class="controller">
-            <div class="btn-circle btn-up"></div>
-            <div class="btn-circle btn-fire active"></div>
-            <div class="btn-circle btn-down"></div>
-        </div>
-        <div class="control-text">
-            <div class="control-label">FIRE</div>
-            <div class="control-desc">ataca a los enemigos</div>
+        <div class="legend-item">
+            <img src="images/fire.svg" alt="FIRE" class="legend-icon">
+            <span class="legend-label">FIRE</span>
+            <span class="legend-desc">ataca a los enemigos</span>
         </div>
     </div>
 
@@ -120,7 +106,7 @@
 
     <h2>estrategia</h2>
 
-    <div class="strategy-box">
+    <div class="box strategy-box">
         <div class="strategy-title">CONSEJOS ESENCIALES</div>
         <ul>
             <li>detente para atacar, luego continúa moviéndote</li>
