favicon, meta, svg fixed

--- a/index.html
+++ b/index.html
@@ -2,7 +2,36 @@
 <html lang="en">
 <head>
     <meta charset="UTF-8">
-    <title>MO_TWANG - Redirecting...</title>
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>MO_TWANG - Game Instructions</title>
+    <meta name="description" content="MO_TWANG is an LED strip arcade game by Metro Olografix. Learn how to play, controls, and strategy tips.">
+
+    <!-- Favicon -->
+    <link rel="icon" type="image/png" href="/favicon-96x96.png" sizes="96x96">
+    <link rel="icon" type="image/svg+xml" href="/favicon.svg">
+    <link rel="shortcut icon" href="/favicon.ico">
+    <link rel="apple-touch-icon" sizes="180x180" href="/apple-touch-icon.png">
+
+    <!-- Canonical URL -->
+    <link rel="canonical" href="https://motwang.olografix.org/">
+
+    <!-- Open Graph -->
+    <meta property="og:type" content="website">
+    <meta property="og:title" content="MO_TWANG - Game Instructions">
+    <meta property="og:description" content="MO_TWANG is an LED strip arcade game by Metro Olografix. Learn how to play, controls, and strategy tips.">
+    <meta property="og:url" content="https://motwang.olografix.org/">
+    <meta property="og:image" content="https://motwang.olografix.org/images/og-image.png">
+    <meta property="og:image:width" content="1200">
+    <meta property="og:image:height" content="630">
+    <meta property="og:image:type" content="image/png">
+
+    <!-- Twitter Card -->
+    <meta name="twitter:card" content="summary_large_image">
+    <meta name="twitter:title" content="MO_TWANG - Game Instructions">
+    <meta name="twitter:description" content="MO_TWANG is an LED strip arcade game by Metro Olografix. Learn how to play, controls, and strategy tips.">
+    <meta name="twitter:image" content="https://motwang.olografix.org/images/og-image.png">
+    <meta name="twitter:site" content="@MetroOlografix">
+
     <script>
         // Detect user's browser language and redirect accordingly
         (function() {
