--- a/es.html
+++ b/es.html
@@ -3,10 +3,40 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>MO_TWANG - Instrucciones</title>
+    <title>MO_TWANG - Instrucciones de Juego</title>
+    <meta name="description" content="MO_TWANG es un juego arcade de tira LED de Metro Olografix. Sobrevive, lucha y alcanza la salida. Aprende los controles, estrategia y mecánicas de juego.">
+
+    <!-- Favicon -->
+    <link rel="icon" type="image/png" href="/favicon-96x96.png" sizes="96x96">
+    <link rel="icon" type="image/svg+xml" href="/favicon.svg">
+    <link rel="shortcut icon" href="/favicon.ico">
+    <link rel="apple-touch-icon" sizes="180x180" href="/apple-touch-icon.png">
+
+    <!-- Canonical URL -->
+    <link rel="canonical" href="https://motwang.olografix.org/es.html">
+
+    <!-- Open Graph -->
+    <meta property="og:type" content="website">
+    <meta property="og:title" content="MO_TWANG - Instrucciones de Juego">
+    <meta property="og:description" content="MO_TWANG es un juego arcade de tira LED de Metro Olografix. Sobrevive, lucha y alcanza la salida. Aprende los controles, estrategia y mecánicas de juego.">
+    <meta property="og:url" content="https://motwang.olografix.org/es.html">
+    <meta property="og:image" content="https://motwang.olografix.org/images/og-image.png">
+    <meta property="og:image:width" content="1200">
+    <meta property="og:image:height" content="630">
+    <meta property="og:image:type" content="image/png">
+
+    <!-- Twitter Card -->
+    <meta name="twitter:card" content="summary_large_image">
+    <meta name="twitter:title" content="MO_TWANG - Instrucciones de Juego">
+    <meta name="twitter:description" content="MO_TWANG es un juego arcade de tira LED de Metro Olografix. Sobrevive, lucha y alcanza la salida. Aprende los controles, estrategia y mecánicas de juego.">
+    <meta name="twitter:image" content="https://motwang.olografix.org/images/og-image.png">
+    <meta name="twitter:site" content="@MetroOlografix">
+
+    <!-- Fonts -->
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=IBM+Plex+Mono:wght@600&family=IBM+Plex+Sans:wght@300;400;600;700&display=swap" rel="stylesheet">
+
     <link rel="stylesheet" href="css/style.css">
 </head>
 <body>
